# paperframe

./: .gitignore  README.md
components/epd/: epd.c
components/logging/: README.md  logging.h
components/miniz/: miniz.c  miniz.h
components/png/: README.md  png.c  png.h
doc/: building.md
esp32/: .gitignore  Makefile
esp32/main/: .gitignore  CMakeLists.txt  djmWifi.c  djmWifi.h  epd_esp32.c  paperframe.c
rpi-pico/: CMakeLists.txt  Makefile  epd.c  epd.h  epd_pico.c  led.c  led.h  paperframe.c  paperframe.h  serial.c  serial.h  usb_descriptors.c
server/: .gitignore  Dockerfile  Makefile  README.md
server/server/: holidays.py  rsvg.py  serve.py  weather.py  weather_fetch.py  widget.py
utilities/: pngpush.c
utilities/png2png/: Makefile  README.md  main.c
